# todo-server

./: .env  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
dev-resources/: logout.json  post_todo.json  put_todo.json  signup.json
migrations/2020-02-09-022512_create_auth/: down.sql  up.sql
migrations/2020-02-22-011512_valid_auth/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/todo_api/: mod.rs
src/todo_api/adapter/: auth.rs  mod.rs
src/todo_api/core/: mod.rs  model.rs
src/todo_api/db/: auth.rs  error.rs  helpers.rs  mod.rs  todo.rs
src/todo_api/model/: auth.rs  core.rs  error.rs  mod.rs
src/todo_api_web/: mod.rs  routes.rs
src/todo_api_web/controller/: auth.rs  mod.rs  todo.rs
src/todo_api_web/middleware/: mod.rs
src/todo_api_web/model/: auth.rs  http.rs  mod.rs  todo.rs
tests/: helpers.rs  lib.rs
tests/todo_api_web/: controller.rs  mod.rs  validation.rs
